updated ignored list

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,18 @@ RWBTaskDAL/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1
 RWBTaskDAL/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 RWBTaskDAL/obj/Debug/TempPE/TWBTaskModel.cs.dll
 RWBTaskDAL/obj/Debug/TempPE/TWBTaskModel.Designer.cs.dll
+RWBTaskWeb/bin/Microsoft.AI.Agent.Intercept.dll
+RWBTaskWeb/bin/Microsoft.AI.DependencyCollector.dll
+RWBTaskWeb/bin/Microsoft.AI.PerfCounterCollector.dll
+RWBTaskWeb/bin/Microsoft.AI.ServerTelemetryChannel.dll
+RWBTaskWeb/bin/Microsoft.AI.Web.dll
+RWBTaskWeb/bin/Microsoft.AI.WindowsServer.dll
+RWBTaskWeb/bin/Microsoft.ApplicationInsights.dll
+RWBTaskWeb/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
+RWBTaskWeb/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+RWBTaskWeb/bin/Newtonsoft.Json.dll
+RWBTaskWeb/bin/System.Net.Http.Formatting.dll
+RWBTaskWeb/bin/System.Web.Cors.dll
+RWBTaskWeb/bin/System.Web.Http.Cors.dll
+RWBTaskWeb/bin/System.Web.Http.dll
+TWBTaskWeb
