--- a/RWBTaskApi/RWBTaskApi.csproj
+++ b/RWBTaskApi/RWBTaskApi.csproj
@@ -220,6 +220,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Models\ChannelEvent.cs" />
+    <Compile Include="Controllers\TaskController.cs" />
     <Compile Include="Models\RWBTasklEvent.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -229,7 +231,7 @@
     <Compile Include="Models\EventsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="TaskHub.cs" />
+    <Compile Include="EventHub.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
