signalr complete implementation

--- a/.gitignore
+++ b/.gitignore
@@ -29112,3 +29112,24 @@ RWBTaskWeb/node_modules/zone.js/LICENSE
 RWBTaskWeb/node_modules/zone.js/LICENSE.wrapped
 RWBTaskWeb/node_modules/zone.js/package.json
 RWBTaskWeb/node_modules/zone.js/README.md
+packages/Microsoft.AspNet.Cors.5.0.0/lib/net45/System.Web.Cors.dll
+packages/Microsoft.AspNet.Cors.5.0.0/Microsoft.AspNet.Cors.5.0.0.nupkg
+packages/Microsoft.AspNet.WebApi.Cors.5.0.0/lib/net45/System.Web.Http.Cors.dll
+packages/Microsoft.AspNet.WebApi.Cors.5.0.0/lib/net45/System.Web.Http.Cors.xml
+packages/Microsoft.AspNet.WebApi.Cors.5.0.0/Microsoft.AspNet.WebApi.Cors.5.0.0.nupkg
+packages/Microsoft.AspNet.WebApi.Owin.5.2.3/lib/net45/System.Web.Http.Owin.dll
+packages/Microsoft.AspNet.WebApi.Owin.5.2.3/lib/net45/System.Web.Http.Owin.xml
+packages/Microsoft.AspNet.WebApi.Owin.5.2.3/Microsoft.AspNet.WebApi.Owin.5.2.3.nupkg
+packages/Microsoft.Owin.3.1.0/lib/net45/Microsoft.Owin.dll
+packages/Microsoft.Owin.3.1.0/lib/net45/Microsoft.Owin.XML
+packages/Microsoft.Owin.3.1.0/Microsoft.Owin.3.1.0.nupkg
+packages/Microsoft.Owin.Cors.3.1.0/lib/net45/Microsoft.Owin.Cors.dll
+packages/Microsoft.Owin.Cors.3.1.0/lib/net45/Microsoft.Owin.Cors.XML
+packages/Microsoft.Owin.Cors.3.1.0/Microsoft.Owin.Cors.3.1.0.nupkg
+packages/Microsoft.Owin.Host.HttpListener.3.0.1/lib/net45/Microsoft.Owin.Host.HttpListener.dll
+packages/Microsoft.Owin.Host.HttpListener.3.0.1/lib/net45/Microsoft.Owin.Host.HttpListener.xml
+packages/Microsoft.Owin.Host.HttpListener.3.0.1/Microsoft.Owin.Host.HttpListener.3.0.1.nupkg
+RWBTaskApi/bin/Microsoft.Owin.Cors.dll
+RWBTaskApi/bin/Microsoft.Owin.Cors.xml
+RWBTaskApi/bin/System.Web.Http.Owin.dll
+RWBTaskApi/bin/System.Web.Http.Owin.xml
